# Supermercat

./: CMakeLists.txt  Doxygen
Supermercat/: Caixa.cpp  Caixa.h  CamiPreferent.cpp  CamiPreferent.h  Client.cpp  Client.h  Producte.cpp  Producte.h  ProducteComprat.cpp  ProducteComprat.h  Supermercat.cpp  Supermercat.h  Supermetcat.cpp  Supermetcat.hpp  Ticket.cpp  Ticket.h  main.cpp
Supermercat.xcodeproj/: project.pbxproj
html/: _caixa_8cpp.html  _caixa_8h.html  _caixa_8h_source.html  _cami_preferent_8cpp.html  _cami_preferent_8h.html  _cami_preferent_8h_source.html  _client_8cpp.html  _client_8h.html  _client_8h_source.html  _producte_8cpp.html  _producte_8h.html  _producte_8h_source.html  _producte_comprat_8cpp.html  _producte_comprat_8h.html  _producte_comprat_8h_source.html  _supermercat_8cpp.html  _supermercat_8h.html  _supermercat_8h_source.html  _ticket_8cpp.html  _ticket_8h.html  _ticket_8h_source.html  annotated.html  annotated_dup.js  class_caixa-members.html  class_caixa.html  class_caixa.js  class_cami_preferent-members.html  class_cami_preferent.html  class_cami_preferent.js  class_client-members.html  class_client.html  class_client.js  class_producte-members.html  class_producte.html  class_producte.js  class_producte_comprat-members.html  class_producte_comprat.html  class_producte_comprat.js  class_supermercat-members.html  class_supermercat.html  (+17 more)
latex/: _caixa_8cpp.tex  _caixa_8h.tex  _cami_preferent_8cpp.tex  _cami_preferent_8h.tex  _client_8cpp.tex  _client_8h.tex  _producte_8cpp.tex  _producte_8h.tex  _producte_comprat_8cpp.tex  _ticket_8cpp.tex  (+16 more)
(+23 files in other folders)
